--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "6.11.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
