--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "@nrwl/react": "^19.8.4",
     "@nrwl/web": "^19.8.4",
     "@types/nodemailer": "^6.4.17",
