--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "6.11.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -57,6 +58,7 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/socket.io": "^3.0.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "cypress": "^13.13.0",
