--- a/apps/rfp_backend/pyproject.toml
+++ b/apps/rfp_backend/pyproject.toml
@@ -27,6 +27,7 @@ readme = 'README.md'
   shell = "^1.0.1"
   jsonify = "^0.5"
   spacy-layout = "^0.0.11"
+  spacy = "^3.8.4"
 
   [tool.poetry.group.dev.dependencies]
   autopep8 = "2.3.1"
