--- a/cicd/tdp205/Jenkinsfile
+++ b/cicd/tdp205/Jenkinsfile
@@ -5,7 +5,11 @@ pipeline {
     // Define environment variables
     environment {
         BRANCH_NAME = 'feat_tdp_205'
-        PATH_EXTRA = '/var/jenkins_home/.local/bin'
+        DOCKER_REGISTRY = 'docker.io/lli453' // e.g., 'docker.io/your-username'
+        // Define Docker credentials ID configured in Jenkins
+        DOCKER_CREDENTIALS = '858b040b-9946-4470-a9c4-849080dc304c'
+        // Get commit hash for tagging
+        GIT_COMMIT_HASH = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
     }
 
     tools {
@@ -45,7 +49,7 @@ pipeline {
                 echo 'Installing Poetry...'
                 sh '''
                 curl - sSL https://install.python-poetry.org | python3 -
-                export PATH=/var/jenkins_home/.local/bin:$PATH
+                export PATH = /var/jenkins_home /.local / bin: $PATH
                 poetry--version
                 '''
             }
@@ -94,11 +98,80 @@ pipeline {
                 }
             }
         }
+
+        stage('Docker Login') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: DOCKER_CREDENTIALS, usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh "echo ${DOCKER_PASS} | docker login ${DOCKER_REGISTRY} -u ${DOCKER_USER} --password-stdin"
+                    }
+                }
+            }
+        }
+
+        stage('Build Docker Images') {
+            parallel {
+                stage('Build Backend') {
+                    steps {
+                        script {
+                            try {
+                                sh """
+                                docker build -t ${DOCKER_REGISTRY}/backend:${GIT_COMMIT_HASH} \
+                                           -f cicd/tdp205/Dockerfile.backend .
+                                """
+                            } catch (Exception e) {
+                                currentBuild.result = 'FAILURE'
+                                error "Backend Docker build failed: ${e.getMessage()}"
+                            }
+                        }
+                    }
+                }
+                
+                stage('Build Frontend') {
+                    steps {
+                        script {
+                            try {
+                                sh """
+                                docker build -t ${DOCKER_REGISTRY}/frontend:${GIT_COMMIT_HASH} \
+                                           -f cicd/tdp205/Dockerfile.frontend .
+                                """
+                            } catch (Exception e) {
+                                currentBuild.result = 'FAILURE'
+                                error "Frontend Docker build failed: ${e.getMessage()}"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Push Docker Images') {
+            steps {
+                script {
+                    try {
+                        // Push backend images
+                        sh """
+                        docker push ${DOCKER_REGISTRY}/backend:${GIT_COMMIT_HASH}
+                        """
+                        
+                        // Push frontend images
+                        sh """
+                        docker push ${DOCKER_REGISTRY}/frontend:${GIT_COMMIT_HASH}
+                        """
+                    } catch (Exception e) {
+                        currentBuild.result = 'FAILURE'
+                        error "Failed to push Docker images: ${e.getMessage()}"
+                    }
+                }
+            }
+        }
+
     }
 
     // Post-build actions
     post {
         always {
+            sh 'docker logout ${DOCKER_REGISTRY}'
             // Clean workspace after build
             cleanWs()
         }
