Update Dockerfiles to run npm ci with --ignore-scripts flag to solve Exit code: 135

--- a/cicd/tdp205/Dockerfile.backend
+++ b/cicd/tdp205/Dockerfile.backend
@@ -9,7 +9,7 @@ COPY . .
 # TEMP FIX for tslib error (as per Linus)
 RUN sed -i 's/"importHelpers":\s*true/"importHelpers": false/' tsconfig.base.json
 
-RUN npm ci
+RUN npm ci --ignore-scripts
 
 # build the backend app
 RUN npx nx build backend --prod
