--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
   },
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8",
     "@nrwl/react": "^19.8.4",
-    "@nrwl/web": "^19.8.4",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.6.0",
+    "babel-loader": "^10.0.0",
     "express": "4.21.2",
     "express-rate-limit": "^7.5.0",
     "lucide-react": "^0.477.0",
     "nodemailer": "^6.10.0",
+    "papaparse": "^5.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
@@ -38,7 +42,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-react": "^7.26.3",
+    "@nrwl/web": "^19.8.4",
     "@nx/cypress": "20.4.6",
     "@nx/eslint": "20.4.6",
     "@nx/express": "20.4.6",
